samples/_failures_safe/1761005288_7320ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9c9737d.c: In function ‘main’:
./samples/SAFE/__tmp_a9c9737d.c:169:16: error: expected declaration or statement at end of input
  169 |                tokens->tokens[i].value);
      |                ^~~~~~
./samples/SAFE/__tmp_a9c9737d.c:169:16: error: expected declaration or statement at end of input
